--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservas</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
     <h1>Reservas</h1>
     <!-- Tabs -->
+    <div class="tabs">
+        <div class="tab active" data-tab="fecha">Fecha</div>
+        <div class="tab" data-tab="funcion">Función</div>
+        <div class="tab" data-tab="asientos">Asientos</div>
+        <div class="tab" data-tab="confirmar">Confirmar</div>
+    </div> <!-- Tabs -->
     <div class="tabs">
         <div class="tab active" data-tab="fecha">Fecha</div>
         <div class="tab" data-tab="funcion">Función</div>
@@ -34,6 +40,6 @@
         <h2>Contenido de Confirmar</h2>
     </div>
 </div>
-<script src="script.js"></script>
+<script src="src/Cuerpo/script.js"></script>
 </body>
 </html>
