--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <button id="nextBtn">Next</button>
     </div>
     <div class="tab-content hidden" id="funcion">
-        <h2>Contenido de Función</h2>
+        <h2>Ingrese el nombre de la pelicula</h2>
+        <input type="text">
+
     </div>
     <div class="tab-content hidden" id="asientos">
         <h2>Contenido de Asientos</h2>
@@ -55,7 +57,10 @@
             <button id="nextSeats">Next</button>
     </div>
     <div class="tab-content hidden" id="confirmar">
-        <h2>Contenido de Confirmar</h2>
+        <h4>Fecha seleccionada:</h4>
+        <h4> Función seleccionada :</h4>
+        <h4> Asientos seleccionados :</h4>
+
     </div>
 </div>
 <script src="src/Cuerpo/script.js"></script>
