Todas las tabs completas

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     </div>
 
     <div class="tab-content hidden" id="tab-funcion">
-        <h2>Contenido de Función</h2>
+        <h2>Selecciona una funcion :</h2>
+        <input type ="text" required />
+
     </div>
     <div class="tab-content hidden" id="tab-asientos">
         <h2>Contenido de Asientos</h2>
@@ -70,7 +72,10 @@
         <button id="nextSeats">Next</button>
     </div>
     <div class="tab-content hidden" id="tab-confirmar">
-        <h2>Contenido de Confirmar</h2>
+        <h4>Fecha seleccionada :</h4>
+        <h4>Tipo de reserva :</h4>
+        <h4 Función seleccionada :></h4>
+        <h4>Asientos seleccionados :</h4>
     </div>
 </div>
 <script src="src/Cuerpo/script.js"></script>
