--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             <label for="tipoReserva">Seleccione un tipo de reserva:</label>
             <select id="tipoReserva" required>
                 <option value="" disabled selected>Seleccione una opción</option>
-                <option value="online">Online</option>
-                <option value="presencial">Presencial</option>
+                <option value="ONLINE">Online</option>
+                <option value="PRESENCIAL">Presencial</option>
+                <option value="PROMOCIONES">Promociones</option>
             </select>
         </div>
         <!-- Botón Next -->
